# vigi

./: README.md  package.json  pnpm-lock.yaml
src/: app.css  app.html  code.css  theme-utils.css  themes.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/processing/: extract_daletpack.rs  extract_data.rs  mod.rs  process_data.rs  process_url.rs  utils.rs
src/lib/: management.ts  state.svelte.ts  state.ts  types.ts  utils.ts
src/lib/components/: BodyRenderer.svelte  BotBar.svelte  Button.svelte  CompactBlock.svelte  DaletRenderer.svelte  SideBar.svelte  Tab.svelte  Tabs.svelte  TagRenderer.svelte  TextRenderer.svelte  ThinBlock.svelte  TopBarDesktop.svelte  TopBarInput.svelte  TopBarMobile.svelte
src/lib/components/buttons/: AdjustmentsButton.svelte  BookmarkButton.svelte  DotsButton.svelte  HistoryBack.svelte  HistoryForward.svelte  HomeButton.svelte  PlusTabButton.svelte  ReloadButton.svelte  SideBarButton.svelte  Sidebar.svelte  TabCount.svelte
src/lib/icons/: Adjustments.svelte  Alert.svelte  BookmarkFilled.svelte  Bookmarks.svelte  ChevronLeft.svelte  ChevronRight.svelte  CloseSidebar.svelte  CompassLoop.svelte  DotsVertical.svelte  Home.svelte  Loading.svelte  OpenSidebar.svelte  Plus.svelte  Reload.svelte  World.svelte  WorldCog.svelte  WorldQuestion.svelte  WorldX.svelte  X.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/browser/[...urn]/: +page.svelte  +page.ts
src/routes/browser/main/: +page.ts
src/routes/browser/tabs/: +page.svelte  +page.ts
src/routes/render/[type]/[uri]/: +page.svelte  +page.ts
src/routes/render/[uri]/: +error.svelte  +page.svelte  +page.ts
src/style/: code.css  render.css  theme-utils.css  themes.css
