[package]
name = "vigi"
version = "0.1.0"
description = "Browser for dalet, text, gemtext (gemini protocol included) with native support of txtdot proxy and local txtdot engines "
authors = ["artegoser", 'TempoWorks']
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vigi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dalet = "1.0.0-pre.28"

tokio = { version = "1", features = ["full"] }

tokio-gemini = { version = "0.5.2" }

bytes = "1.10.1"

reqwest = "0.12.5"
url = "2.5.4"
mime = "0.3.17"
async-trait = "0.1.88"

bitcode = { version = "0.6.6", features = ["serde"] }
